# SpaceKit

./: .gitattributes  .gitignore  Cargo.toml  Package.swift  build.sh
AstroSwift/: AppDelegate.swift  AstroSwiftApp.swift  ContentView.swift  ContentViewModel.swift  Planet+Additions.swift  PlanetEllipseView.swift  PlanetRingView.swift  SolarSystemView.swift  SolarSystemViewModel.swift
AstroSwift.xcodeproj/: project.pbxproj
AstroSwift.xcodeproj/xcshareddata/xcschemes/: AstroSwift.xcscheme
AstroSwift.xcworkspace/: contents.xcworkspacedata
AstroSwift/Sources/: ContentViewModel.swift  NASAAPIKey.swift  PlanetEllipseView.swift  SolarSystemView.swift  SolarSystemViewModel.swift
AstroSwift/SupportingFiles/: AppDelegate.swift  HostingController.swift  Info.plist  SceneDelegate.swift
Sources/SpaceKit/: Astronomy.swift  PlanetPositioning.swift
SpaceKit/: Cargo.toml  Package.swift  README.md  build.sh
SpaceKit/Sources/SpaceKit/: Astronomy.swift  PlanetPositioning.swift  SpaceKit.swift
SpaceKit/Tests/SpaceKitTests/: SpaceKitTests.swift
SpaceKit/archs/: x86_64-apple-ios.json
SpaceKitDemo/: Cargo.toml
SpaceKitDemo/src/: main.rs
archs/: aarch64-apple-ios-sim.json  aarch64-apple-ios.json  x86_64-apple-ios.json
libspacekit.xcframework/: Info.plist
libspacekit.xcframework/ios-arm64/Headers/: libspacekit.h
space_kit/: Cargo.toml  Package.swift  build.sh  cbindgen.toml
space_kit/Sources/SpaceKit/: SpaceKit.swift
space_kit/src/: helpers.rs  lib.rs
space_kit_demo/: Cargo.toml
space_kit_demo/src/: main.rs
src/: helpers.rs  lib.rs
(+2 files in other folders)
