[package]
name = "spacekit"
version = "0.1.0"
authors = ["Dalton Claybrook <daltonclaybrook@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro = "2.0.0"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "spacekit"
crate-type = ["staticlib", "cdylib"]
