[package]
name = "spacekit_demo"
version = "0.1.0"
authors = ["Dalton Claybrook <daltonclaybrook@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["full"] }
spacekit = { path = "../SpaceKit" }
dotenv = "0.15.0"
