[package]
name = "space_kit"
version = "0.1.0"
authors = ["Dalton Claybrook <daltonclaybrook@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro = "2.0.0"
tokio = { version = "1.7.1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[lib]
name = "space_kit"
crate-type = ["staticlib", "cdylib"]
